11 月 18 日
added mixed fuel box and piercing laser box for pulser laser.

11 月 9 日
reduced particle amount to optimize shock flak bolt and acid mist shell.

8 月 23 日 下午 4:23
Localization update.