@@ -1,8 +1,6 @@
 # BVTA-Extension
 An extension to BVTA which adds some new ammunition items made by community modders
 
-Last tested game version: 0.19.14.0
-
 Railgun
   - Depleted Fuel Railgun Shell from Ammo Mod by Laryssa
   - APHE Proximity Railgun Shell from APHE Railgun Shells by Birb
