@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<contentpackage name="BVTA Extension" modversion="0.1.11" corepackage="False" steamworkshopid="2852898905" gameversion="0.20.7.0">
+<contentpackage name="BVTA Extension" modversion="0.1.11" corepackage="False" steamworkshopid="2852898905" gameversion="0.20.8.0">
   <Item file="%ModDir%/new_chaingun.xml" />
   <Item file="%ModDir%/new_coilgun.xml" />
   <Item file="%ModDir%/new_flakcannon.xml" />
