@@ -40,14 +40,14 @@
   <!--连射炮爆破弹药箱-->
   <Item identifier="chaingunammoboxexplosive" variantof="chaingunammoboxphysicorium">
     <PreferredContainer primary="chaingunammosource,ammoboxcontainer" />
-    <PreferredContainer secondary="wreckammoboxcontainer" spawnprobability="0.03" />
-    <Price baseprice="750" minleveldifficulty="25">
+    <PreferredContainer secondary="wreckammoboxcontainer" amount="1" spawnprobability="0.03" />
+    <Price baseprice="750" sold="false" displaynonempty="true" minleveldifficulty="25">
       <Price storeidentifier="merchantoutpost" multiplier="1.3" />
       <Price storeidentifier="merchantcity" multiplier="1.2" />
-      <Price storeidentifier="merchantresearch" multiplier="1.3" />
-      <Price storeidentifier="merchantmilitary" multiplier="0.9" minavailable="2" />
-      <Price storeidentifier="merchantmine" multiplier="1.2" />
-      <Price storeidentifier="merchantarmory" multiplier="0.9" minavailable="2" />
+      <Price storeidentifier="merchantresearch" multiplier="1.3" sold="false" />
+      <Price storeidentifier="merchantmilitary" multiplier="0.9" minavailable="2" sold="true" />
+      <Price storeidentifier="merchantmine" multiplier="1.0" minavailable="2" sold="true" />
+      <Price storeidentifier="merchantarmory" multiplier="0.9" minavailable="2" sold="true" />
     </Price>
     <Deconstruct>
       <Item identifier="c4block" mincondition="0.95" />
@@ -113,14 +113,14 @@
   <Item identifier="chaingunammoboxspread" variantof="chaingunammobox">
     <PreferredContainer primary="chaingunammosource" spawnprobability="0" />
     <PreferredContainer primary="ammoboxcontainer" />
-    <PreferredContainer secondary="wreckammoboxcontainer" spawnprobability="0.07" />
-    <Price baseprice="200" minavailable="1">
+    <PreferredContainer secondary="wreckammoboxcontainer" amount="1" spawnprobability="0.07" />
+    <Price baseprice="150" minavailable="1" displaynonempty="true">
       <Price storeidentifier="merchantoutpost" multiplier="1.3" />
       <Price storeidentifier="merchantcity" multiplier="1.2" />
       <Price storeidentifier="merchantresearch" multiplier="1.3" />
-      <Price storeidentifier="merchantmilitary" multiplier="0.9" minavailable="2" />
-      <Price storeidentifier="merchantmine" multiplier="1.2" />
-      <Price storeidentifier="merchantarmory" multiplier="0.9" minavailable="2" />
+      <Price storeidentifier="merchantmilitary" multiplier="0.9" minavailable="3" />
+      <Price storeidentifier="merchantmine" multiplier="1.0" minavailable="2" />
+      <Price storeidentifier="merchantarmory" multiplier="0.9" minavailable="3" />
     </Price>
     <Deconstruct>
       <Item identifier="lead" mincondition="0.95" />
