@@ -21,7 +21,7 @@
   <entityname.flakcannondirectionalpiercingammobox>Focused Armor-Piercing Flak Shells Box</entityname.flakcannondirectionalpiercingammobox>
   <entitydescription.flakcannondirectionalpiercingammobox>A heavy box of low spread armor-piercing ammo for the Flak Cannon. Good against targets behind walls.</entitydescription.flakcannondirectionalpiercingammobox>
   <entityname.pulselaserammoboxmixed>Mixed Pulse Laser Fuel Box</entityname.pulselaserammoboxmixed>
-  <entitydescription.pulselaserammoboxmixed>A mix-up of two types of pulse laser ammo, switches lens mode after each shot. Containing fuel for 80 shots.</entitydescription.pulselaserammoboxmixed>
+  <entitydescription.pulselaserammoboxmixed>A mix-up of two types of fulgurium pulse laser ammo, switches lens mode after each shot. Containing twice as much fuel.</entitydescription.pulselaserammoboxmixed>
   <entityname.pulselaserammoboxpiercing>Piercing Pulse Laser Fuel Box</entityname.pulselaserammoboxpiercing>
   <entitydescription.pulselaserammoboxpiercing>A box containing a special concoction of chemicals and rare materials. The lens focuses laser to improve penetration, allowing the laser to hit targets behind walls.</entitydescription.pulselaserammoboxpiercing>
 </infotexts>
